--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(../Basic-Portfolio/assets/images/gravel.png);
+    background-image: url(./gravel\ copy.png);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -121,7 +121,7 @@ hr.linetwo, hr.linethree {
     margin: 1rem;
 }
 div.Hangman {
-    background-image: url(../Basic-Portfolio/assets/images/hangman.jpg);
+    background-image: url(./hangman\ copy.jpg);
     position: relative;
     width: 200px;
     height: 200px;
@@ -151,9 +151,10 @@ div.RPGGame {
     height: 200px;
     border: 1px solid black;
     margin-left: 2rem;
-    background-image: url(../Basic-Portfolio/assets/images/RPG.jpg);
+    background-image: url(./RPG\ copy.jpg);
     margin-top: 1rem;
     display: inline-block;
+    background-size: cover;
 }
 div.RPGLink{
     position: absolute;
@@ -170,9 +171,10 @@ div.TriviaGame {
     height: 200px;
     border: 1px solid black;
     margin-left: 1rem;
-    background-image: url(../Basic-Portfolio/assets/images/Trivia.jpg);
+    background-image: url(./Trivia\ copy.jpg);
     margin-top: 2rem; 
     display: inline-block;
+    background-size: cover;
 }
 div.TriviaLink {
     position: absolute;
@@ -189,9 +191,10 @@ div.RutgersInfoWidget {
     height: 200px;
     border: 1px solid black;
     margin-left: 2rem;
-    background-image: url(../Basic-Portfolio/assets/images/RIW.jpg);
+    background-image: url(./RIW\ copy.jpg);
     margin-top: 2rem; 
     display: inline-block;
+    background-size: cover;
 }
 div.RIWLink {
     position: absolute;
@@ -208,9 +211,10 @@ div.RockPaper {
     height: 200px;
     border: 1px solid black;
     margin-left: 1rem;
-    background-image: url(../Basic-Portfolio/assets/images/RockPaper.jpg);
+    background-image: url(./RockPaper\ copy.jpg);
     margin-top: 2rem;  
     margin-bottom: 2rem;
+    background-size: cover;
 }
 div.RockPaperLink {
     position: absolute;
@@ -229,4 +233,99 @@ div.RockPaperLink {
 }
 .nav-nav>li:last-child {
     border: none;
+}
+
+@media only screen and (max-width: 600px) {
+    p {
+        line-height: 200%;
+        font-size: 1.5rem; 
+        text-align: center;
+        display: block;
+        margin: 0 auto;
+    }
+    img {
+        width: 300px;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+        float: none;
+    }
+    div.content {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+    form {
+        width: auto;
+        display: block;
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    h1 {
+        text-align: center;
+    }
+    h2 {
+        font-size: 2rem;
+        text-align: center;
+    }
+    nav.Header__nav {
+        display: block;
+        font-size: 1rem;
+        text-align: center;
+        width: 100%;
+    }
+    div.Hangman {
+        display: block;
+        width: auto;
+        float:none;
+        margin: 0 auto;
+
+    }
+    div.RPGGame{
+        display: block;
+        width: auto;
+        float: none;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+    div.TriviaGame {
+        display: block;
+        width: auto;
+        float:none;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+    div.RutgersInfoWidget {
+        display: block;
+        width: auto;
+        float:none;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+    div.RockPaper {
+        display: block;
+        width: auto;
+        float:none;
+        margin: 0 auto;
+        margin-top: 2rem;
+    }
+
+
+}
+
+@media () {
+    
+}
+
+@media () {
+    
+}
+
+@media () {
+    
+}
+
+@media () {
+    
 }
